# kafka-rack-aware-topic-placement

./: .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-test.yml
docs/: ARCHITECTURE.md  OPERATIONS.md  QUICK_START.md  TEST_RESULTS.md  TROUBLESHOOTING.md  kafka-rack-placement-prd.md
examples/docker-compose/: README.md  docker-compose.yml
examples/docker-compose/scripts/: create-topics.sh  inspect-cluster.sh  startup.sh  teardown.sh  validate-placement.sh
examples/minikube-strimzi/: README.md
examples/minikube-strimzi/kafka/: kafka-cluster.yaml  kafka-nodepool-controllers.yaml  kafka-nodepool-general-brokers.yaml  kafka-nodepool-poc-brokers.yaml
examples/minikube-strimzi/scripts/: cleanup.sh  create-topics.sh  deploy.sh  trigger-rebalance.sh  validate-placement.sh
examples/minikube-strimzi/setup/: 00-namespace.yaml  install.sh
examples/minikube-strimzi/topics/: kafka-rebalance.yaml  poc-topics.yaml
python/: requirements.txt  topic_validator.py
scripts/: create-topics.sh  inspect-cluster.sh  startup.sh  teardown.sh  validate-placement.sh
